--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
       }
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
   <script type="importmap">
 {
   "imports": {
