--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Pokédex</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -43,5 +43,6 @@
 </head>
   <body class="bg-poke-gray-darkest">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
