--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23212121' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='10'/%3E%3Cpath d='M12 2a10 10 0 0 0-10 10h20A10 10 0 0 0 12 2z' fill='%23EF5350' stroke-width='0'/%3E%3Cpath d='M2 12h20'/%3E%3Ccircle cx='12' cy='12' r='4' fill='white' stroke='%23212121' stroke-width='2'/%3E%3Ccircle cx='12' cy='12' r='1.5' fill='%23212121'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Pokédex</title>
     <script src="https://cdn.tailwindcss.com"></script>
